# hello_rust_wasm

./: .gitignore  Cargo.toml  README.md
site/: index.html  index.js  package-lock.json
src/: board.rs  lib.rs  pieces.rs
